# IMA208

./: README.md  Synthesis.md
TP2/: TP2 - Part 2 - William Liaw.ipynb
TP3/: TP_KalmanFiltering_william-liaw.ipynb  robot_simulation.py
TP7/: CMakeLists.txt  Instructions.md  Report.md  SimpleFilteringAdaptativeThreshold.py  SimpleFilteringFixedThreshold.py  reconstruct.cpp
TP7/STL/: bunny_0.0005.stl
